--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,7 +14,7 @@
       <ion-label stacked>Senha</ion-label>
       <ion-input type="password"></ion-input>
     </ion-item>
-    <button id="btnEntart" ion-button block>Entrar</button>
+    <button ion-button block (click)="login()">Entrar</button>
   </form>
 
   <button ion-button block outline>Registrar</button>
