--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,4 +1,3 @@
-
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
@@ -9,5 +8,9 @@
 </ion-header>
 
 <ion-content padding>
-<h2> {{ email }} </h2>
+<ion-avatar>
+  <img class="circle" [src]="cliente?.imageUrl || 'assets/imgs/avatar-blank.png' ">
+</ion-avatar>
+<h2 text-center>{{ cliente?.nome }}</h2>
+<p text-center>{{ cliente?.email }}</p>
 </ion-content>
