--- a/src/pages/produto-detail/produto-detail.html
+++ b/src/pages/produto-detail/produto-detail.html
@@ -16,5 +16,5 @@
       </p>
     </ion-card-content>
   </ion-card>
-  <button ion-button block outline>Adicionar ao carrinho</button>
+  <button ion-button block outline (click)="addToCard(item)">Adicionar ao carrinho</button>
 </ion-content>
