--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -10,6 +10,10 @@
 <ion-content padding>
 
   <ion-list>
+    <ion-fab top right edge>
+      <button navPush="CartPage" ion-fab mini><ion-icon name="cart"></ion-icon></button>
+     </ion-fab>
+     
     <button ion-item *ngFor="let item of items" (click)="showProdutos(item.id)">
       <ion-thumbnail item-start>
         <img src="{{bucketUrl}}/cat{{item.id}}.jpg">
