--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -5,6 +5,9 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-fab top right edge>
+    <button navPush="CartPage" ion-fab mini><ion-icon name="cart"></ion-icon></button>
+   </ion-fab>
 
   <ion-list>
     <button ion-item *ngFor="let item of items" (click)="showDetail(item.id)">
@@ -15,5 +18,4 @@
       <p>{{item.preco | currency}}</p>
     </button>
   </ion-list>
-
 </ion-content>
