--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -34,4 +34,5 @@
   </ion-list>
 
   <button ion-button block (click)="goOn()">Continuar comprando</button>
+  <button ion-button color="secondary" block (click)="chekout()">Finalizar compra</button>
 </ion-content>
